--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,16 @@ data/test*
 dataset
 *.pkl
 .ipynb_checkpoints
+TextClassifie-*.pkl
+data/docx*
+*.log
+__pycache__/
+notebook/answer/
+notebook/answer_dataset/
+notebook/answer_markdown/
+notebook/full_docx/
+notebook/image/
+notebook/negative_file/
+notebook/new_classification_datasets/
+notebook/not_answer/
+notebook/positive_file/
