change branch need

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ notebook/negative_file/
 notebook/new_classification_datasets/
 notebook/not_answer/
 notebook/positive_file/
+notebook/classifier/
